--- a/src/components/container/Container.module.css
+++ b/src/components/container/Container.module.css
@@ -2,12 +2,23 @@
     max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 10px 15px;
     text-align: center;
-    background-color: #f2f2ed;
+    font-family: 'IBM Plex Sans Devanagari', sans-serif;
+}
+
+h1,
+h2 {
+    font-weight: 600;
+    color: rgb(11, 100, 11);
+}
+
+h1 {
+    font-size: 46px;
+}
+
+h2 {
+    font-size: 36px;
 }
 
 ul,
@@ -19,4 +30,9 @@ ol {
 
 p {
     margin: 0;
+}
+
+input {
+    font-size: 20px;
+    color: rgb(94, 90, 90);
 }
