--- a/src/components/contactListItem/ContactListItem.module.css
+++ b/src/components/contactListItem/ContactListItem.module.css
@@ -1,28 +1,25 @@
-.contactListItem {
+.contactsItem {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .button {
-    vertical-align: center;
-    margin-left: 20px;
-    margin-bottom: 15px;
-    border-radius: 2px;
-    width: 100px;
-    border: 1px solid rgb(11, 100, 11);
+    display: inline-flex;
+    align-items: center;
+    border: none;
+    padding: 0 20px;
+    min-width: 50px;
     background-color: transparent;
     font-family: inherit;
     font-size: 20px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
 .button:focus {
     cursor: pointer;
-    background-color: rgb(182, 211, 182);
-}
-
-.button:not(:last-child) {
-    margin-bottom: 30px;
+    transform: scale(1.1);
 }
