--- a/src/components/contactForm/ContactForm.module.css
+++ b/src/components/contactForm/ContactForm.module.css
@@ -19,7 +19,7 @@ form {
     padding: 10px;
     text-align: left;
     border: none;
-    border-bottom: 2px solid #000;
+    border-bottom: 3px solid rgb(11, 100, 11);
 }
 
 .input:focus {
