--- a/src/components/filter/Filter.module.css
+++ b/src/components/filter/Filter.module.css
@@ -17,7 +17,7 @@
     padding: 10px;
     text-align: left;
     border: none;
-    border-bottom: 2px solid #000;
+    border-bottom: 3px solid rgb(11, 100, 11);
 }
 
 .input:focus {
