--- a/src/components/contactForm/ContactForm.module.css
+++ b/src/components/contactForm/ContactForm.module.css
@@ -41,11 +41,11 @@ form {
    background-color: transparent;
    font-family: inherit;
    font-size: 20px;
-   transition: background-color var(--transition-duration) var(--timing-function);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
 .button:focus {
     cursor: pointer;
-    background-color: rgb(182, 211, 182);
+    transform: scale(1.1);
 }
