--- a/src/components/filter/Filter.module.css
+++ b/src/components/filter/Filter.module.css
@@ -14,10 +14,29 @@
 }
 
 .input {
-    padding: 10px;
+    padding: 10px 0;
+    width: 100%;
+    height: 25px;
     text-align: left;
     border: none;
     border-bottom: 3px solid rgb(11, 100, 11);
+}
+
+.castomInput {
+    position: relative;
+}
+
+.castomInput:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto 0;
+    width: 35px;
+    height: 35px;
+    background: url('../../icon/search-icon.png') no-repeat;
+    background-size: cover;
 }
 
 .input:focus {
